Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.13.0 Alpha 1
-
None
-
macOS 10.14
Xcode 10
10.14 SDK
-
-
bbee17d60ae390a8c2c53d429cfa552f726a6d45
Description
https://codereview.qt-project.org/#/c/244355/ Update submodules on 'dev' in qt5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1544843582
agent:2018/11/24 11:02:44 build.go:193: /Users/qt/work/qt/qtwebengine/tests/auto/quick/dialogs/target_wrapper.sh ./tst_dialogs -o /Users/qt/work/testresults/tests/auto/quick/dialogs016968483,xml -o -,txt
agent:2018/11/24 11:02:45 build.go:193: ********* Start testing of tst_Dialogs *********
agent:2018/11/24 11:02:45 build.go:193: Config: Using QtTest library 5.13.0, Qt 5.13.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 10.0.0 (clang-1000.11.45.2) (Apple))
agent:2018/11/24 11:02:45 build.go:193: PASS : tst_Dialogs::initTestCase()
agent:2018/11/24 11:02:46 build.go:193: Received signal 11 SEGV_MAPERR 000000000000
agent:2018/11/24 11:02:46 build.go:193: [0x000108e6276c]
agent:2018/11/24 11:02:46 build.go:193: [0x000108e62601]
agent:2018/11/24 11:02:46 build.go:193: [0x7fff77960f5a]
agent:2018/11/24 11:02:46 build.go:193: [0x7fba2f788941]
agent:2018/11/24 11:02:46 build.go:193: [0x000107324d44]
agent:2018/11/24 11:02:46 build.go:193: [0x000107326739]
agent:2018/11/24 11:02:46 build.go:193: [0x00010a094715]
agent:2018/11/24 11:02:46 build.go:193: [0x000106ca15db]
agent:2018/11/24 11:02:46 build.go:193: [0x000108d8df02]
agent:2018/11/24 11:02:46 build.go:193: [0x000108db58ef]
agent:2018/11/24 11:02:46 build.go:193: [0x000108db5e89]
agent:2018/11/24 11:02:46 build.go:193: [0x000106c3350f]
agent:2018/11/24 11:02:46 build.go:193: [0x00010e208a46]
agent:2018/11/24 11:02:46 build.go:193: [0x00010e1df158]
agent:2018/11/24 11:02:46 build.go:193: [0x00010e1dedb4]
agent:2018/11/24 11:02:46 build.go:193: [0x00010e1dffee]
agent:2018/11/24 11:02:46 build.go:193: [0x000110fb5c99]
agent:2018/11/24 11:02:46 build.go:193: [0x000110fb50c5]
agent:2018/11/24 11:02:46 build.go:193: [0x00010e1df302]
agent:2018/11/24 11:02:46 build.go:193: [0x00010e232109]
agent:2018/11/24 11:02:46 build.go:193: [0x000106ba5148]
agent:2018/11/24 11:02:46 build.go:193: [0x00010e1e8fff]
agent:2018/11/24 11:02:46 build.go:193: [0x00010ebce0d2]
agent:2018/11/24 11:02:46 build.go:193: [0x00010ebced2c]
agent:2018/11/24 11:02:46 build.go:193: [0x00010ebcfe37]
agent:2018/11/24 11:02:46 build.go:193: [0x00010ebd0a5a]
agent:2018/11/24 11:02:46 build.go:193: [0x00010ebd06b4]
agent:2018/11/24 11:02:46 build.go:193: [0x000106ba87e5]
agent:2018/11/24 11:02:46 build.go:193: [0x7fff77652015]
agent:2018/11/24 11:02:46 build.go:193: [end of stack trace]
agent:2018/11/24 11:02:46 build.go:193: make: *** [check] Segmentation fault: 11
agent:2018/11/24 11:02:46 build.go:193: [1124/130246.164646:ERROR:mach_port_broker.mm(43)] bootstrap_look_up: Unknown service name (1102)
agent:2018/11/24 11:02:46 build.go:237: Process finished with error: exit status 2
agent:2018/11/24 11:02:46 build.go:196: Error reading from stdout/err: exit status 2
Attachments
Issue Links
- relates to
-
QTBUG-78084 Assert when closing select element on macOS
- Closed
- resulted in
-
QTBUG-72043 Issues with Chromium GL in same thread as scene graph
- Closed